--- a/public/index.html
+++ b/public/index.html
@@ -688,7 +688,7 @@ getPlaygrounds();
 		});
 	}
 getStaff('expert');
-// getStaff('tracker');
+getStaff('tracker');
 getStaff('jury');
 						</script>
 						<div class="section-title">
@@ -698,6 +698,111 @@ getStaff('jury');
 						</div>
 						<div class="sPersons__slider sPersons__slider--js swiper" id="expert">
 							<div class="swiper-wrapper"></div>
+								<div class="row">
+									<div class="col">
+										<div class="swiper-pagination"></div>
+									</div>
+									<div class="col-auto">
+										<div class="arrow-wrap">
+											<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+												<svg class="icon icon-arrow-left ">
+													<use xlink:href="img/svg/sprite.svg#arrow-left"></use>
+												</svg>
+											</div>
+											<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+												<svg class="icon icon-arrow-right ">
+													<use xlink:href="img/svg/sprite.svg#arrow-right"></use>
+												</svg>
+											</div>
+										</div>
+									</div>
+								</div>
+						</div>
+						<div class="sPersons__title">Трекеры
+						</div>
+						<div class="sPersons__slider sPersons__slider--js swiper" id="tracker">
+							<div class="swiper-wrapper">
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Виктор Сожможнов
+											</div>
+											<div class="sPersons__text">Следует отметить, что высококачественный прототип будущего проекта способствует
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Виктория Складчинкова
+											</div>
+											<div class="sPersons__text">Прототип будущего проекта способствует
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Ким Самаджокис
+											</div>
+											<div class="sPersons__text">Следует отметить
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Николай Ионов
+											</div>
+											<div class="sPersons__text">Следует отметить, что высококачественный 
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Виктор Сожможнов
+											</div>
+											<div class="sPersons__text">Следует отметить, что высококачественный прототип будущего проекта способствует
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Виктория Складчинкова
+											</div>
+											<div class="sPersons__text">Прототип будущего проекта способствует
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Ким Самаджокис
+											</div>
+											<div class="sPersons__text">Следует отметить
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Николай Ионов
+											</div>
+											<div class="sPersons__text">Следует отметить, что высококачественный 
+											</div>
+										</div>
+									</div>
+							</div>
 								<div class="row">
 									<div class="col">
 										<div class="swiper-pagination"></div>
