--- a/public/index.html
+++ b/public/index.html
@@ -721,88 +721,7 @@ getStaff('jury');
 						<div class="sPersons__title">Трекеры
 						</div>
 						<div class="sPersons__slider sPersons__slider--js swiper" id="tracker">
-							<div class="swiper-wrapper">
-									<div class="sPersons__slide swiper-slide">
-										<div class="sPersons__item">
-											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
-											</div>
-											<div class="sPersons__name">Виктор Сожможнов
-											</div>
-											<div class="sPersons__text">Следует отметить, что высококачественный прототип будущего проекта способствует
-											</div>
-										</div>
-									</div>
-									<div class="sPersons__slide swiper-slide">
-										<div class="sPersons__item">
-											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
-											</div>
-											<div class="sPersons__name">Виктория Складчинкова
-											</div>
-											<div class="sPersons__text">Прототип будущего проекта способствует
-											</div>
-										</div>
-									</div>
-									<div class="sPersons__slide swiper-slide">
-										<div class="sPersons__item">
-											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
-											</div>
-											<div class="sPersons__name">Ким Самаджокис
-											</div>
-											<div class="sPersons__text">Следует отметить
-											</div>
-										</div>
-									</div>
-									<div class="sPersons__slide swiper-slide">
-										<div class="sPersons__item">
-											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
-											</div>
-											<div class="sPersons__name">Николай Ионов
-											</div>
-											<div class="sPersons__text">Следует отметить, что высококачественный 
-											</div>
-										</div>
-									</div>
-									<div class="sPersons__slide swiper-slide">
-										<div class="sPersons__item">
-											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
-											</div>
-											<div class="sPersons__name">Виктор Сожможнов
-											</div>
-											<div class="sPersons__text">Следует отметить, что высококачественный прототип будущего проекта способствует
-											</div>
-										</div>
-									</div>
-									<div class="sPersons__slide swiper-slide">
-										<div class="sPersons__item">
-											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
-											</div>
-											<div class="sPersons__name">Виктория Складчинкова
-											</div>
-											<div class="sPersons__text">Прототип будущего проекта способствует
-											</div>
-										</div>
-									</div>
-									<div class="sPersons__slide swiper-slide">
-										<div class="sPersons__item">
-											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
-											</div>
-											<div class="sPersons__name">Ким Самаджокис
-											</div>
-											<div class="sPersons__text">Следует отметить
-											</div>
-										</div>
-									</div>
-									<div class="sPersons__slide swiper-slide">
-										<div class="sPersons__item">
-											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
-											</div>
-											<div class="sPersons__name">Николай Ионов
-											</div>
-											<div class="sPersons__text">Следует отметить, что высококачественный 
-											</div>
-										</div>
-									</div>
-							</div>
+							<div class="swiper-wrapper"></div>
 								<div class="row">
 									<div class="col">
 										<div class="swiper-pagination"></div>
