edit top-nav & headerBlock

--- a/public/02-best-teams.html
+++ b/public/02-best-teams.html
@@ -108,7 +108,7 @@ const template = function (img, title, a) {
 								<div class="toggle-menu-mobile toggle-menu-mobile--js d-xl-none"><span></span>
 								</div>
 							</div>
-							<div class="col">
+							<div class="col-auto">
 								<div class="menu-mobile menu-mobile--js">
 									<div class="menu-mobile__inner">
 										<div class="toggle-menu-mobile toggle-menu-mobile--js d-xl-none"><span></span>
@@ -131,7 +131,7 @@ const template = function (img, title, a) {
 												</svg>
 											</a>
 										</div>
-										<a class="top-nav__btn btn btn-success d-xl-none" href="https://lk.youthbit.ru/">Регистрация/Войти
+										<a class="top-nav__btn btn btn-success d-xl-none" href="https://lk.youthbit.ru/">Войти
 										</a>
 									</div>
 								</div>
@@ -146,7 +146,7 @@ const template = function (img, title, a) {
 								</div>
 							</div>
 							<div class="col-auto d-none d-xl-inline-block">
-								<a class="top-nav__btn btn btn-success" href="https://lk.youthbit.ru/">Регистрация/Войти
+								<a class="top-nav__btn btn btn-success" href="https://lk.youthbit.ru/">Войти
 								</a>
 							</div>
 							<div class="col-auto order-xl-first">
