--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@ const template = function (img, title, a) {
 								<div class="toggle-menu-mobile toggle-menu-mobile--js d-xl-none"><span></span>
 								</div>
 							</div>
-							<div class="col">
+							<div class="col-auto">
 								<div class="menu-mobile menu-mobile--js">
 									<div class="menu-mobile__inner">
 										<div class="toggle-menu-mobile toggle-menu-mobile--js d-xl-none"><span></span>
@@ -131,7 +131,7 @@ const template = function (img, title, a) {
 												</svg>
 											</a>
 										</div>
-										<a class="top-nav__btn btn btn-success d-xl-none" href="https://lk.youthbit.ru/">Регистрация/Войти
+										<a class="top-nav__btn btn btn-success d-xl-none" href="https://lk.youthbit.ru/">Войти
 										</a>
 									</div>
 								</div>
@@ -146,7 +146,7 @@ const template = function (img, title, a) {
 								</div>
 							</div>
 							<div class="col-auto d-none d-xl-inline-block">
-								<a class="top-nav__btn btn btn-success" href="https://lk.youthbit.ru/">Регистрация/Войти
+								<a class="top-nav__btn btn btn-success" href="https://lk.youthbit.ru/">Войти
 								</a>
 							</div>
 							<div class="col-auto order-xl-first">
@@ -179,9 +179,8 @@ const template = function (img, title, a) {
 								<li>Соревнуйся за&nbsp;призовой фонд в&nbsp;1&nbsp;миллион рублей и&nbsp;захватывающее путешествие по&nbsp;России</li>
 								<li>Участвуй онлайн из&nbsp;любой точки страны</li>
 								<li>Приходи кодить на&nbsp;офлайн-площадку</li>
-								<li>Регистрируйся до&nbsp;14&nbsp;февраля</li>
 							</ul>
-							<a class="headerBlock__btn btn btn-success" href="https://lk.youthbit.ru/">Регистрация/Войти
+							<a class="headerBlock__btn btn btn-success disabled" href="https://lk.youthbit.ru/">Регистрация завершена
 							</a>
 						</div>
 					</div>
