--- a/public/index.html
+++ b/public/index.html
@@ -250,42 +250,6 @@ const template = function (img, title, a) {
 					</div>
 				</section>
 				<!-- end sTeam-->
-				<!-- start sProcedure-->
-				<section class="sProcedure section" id="sProcedure">
-					<div class="container">
-						<div class="section-title">
-							<h2>Что нужно сделать?</h2>
-						</div>
-						<div class="sProcedure__row row">
-							<div class="sProcedure__col col-lg-3">
-								<svg class="icon icon-curved-arrow-1 ">
-									<use xlink:href="img/svg/sprite.svg#curved-arrow-1"></use>
-								</svg>
-								<a class="sProcedure__item" href="https://lk.youthbit.ru/"><span>25&nbsp;января&nbsp;&minus; 14&nbsp;февраля</span><b>Зарегистрируйся <br> на&nbsp;хакатон</b>
-								</a>
-							</div>
-							<div class="sProcedure__col col-lg-3">
-								<svg class="icon icon-curved-arrow-2 ">
-									<use xlink:href="img/svg/sprite.svg#curved-arrow-2"></use>
-								</svg>
-								<a class="sProcedure__item" href="https://lk.youthbit.ru/team"><span>25&nbsp;января&nbsp;&minus; 14&nbsp;февраля</span><b>Собери <br> команду</b>
-								</a>
-							</div>
-							<div class="sProcedure__col col-lg-3">
-								<svg class="icon icon-curved-arrow-3 ">
-									<use xlink:href="img/svg/sprite.svg#curved-arrow-3"></use>
-								</svg>
-								<a class="sProcedure__item" href="https://lk.youthbit.ru/hack"><span>25&nbsp;января&nbsp;&minus; 14&nbsp;февраля</span><b>Выбери <br> кейс</b>
-								</a>
-							</div>
-							<div class="sProcedure__col col-lg-3">
-								<div class="sProcedure__item"><span>17&minus;19 февраля</span><b>Создай <br> решение</b>
-								</div>
-							</div>
-						</div>
-					</div>
-				</section>
-				<!-- end sProcedure-->
 				<!-- start sCases-->
 				<section class="sCases section" id="sCases">
 					<div class="container">
@@ -314,7 +278,7 @@ const template = function (img, title, a) {
 										<p>Миссия Росмолодёжи&nbsp;&mdash; создать среду, которая поможет молодым найти и&nbsp;реализовать свои мечты и&nbsp;таланты в&nbsp;нашей стране.</p>
 										<p>Каждый год в&nbsp;команду Росмолодёжи приходят новые специалисты, которых необходимо интегрировать в&nbsp;экосистему ведомства и&nbsp;его корпоративную культуру.</p>
 										<p>Руководителям подразделений и&nbsp;коллегам сложно мгновенно погрузить нового сотрудника в&nbsp;специфику его деятельности. Необходимые для адаптации новичков документы хранятся на&nbsp;различных ресурсах. Новый человек попадает в&nbsp;активный информационный поток, с&nbsp;большим количеством событий, мероприятий, внешних и&nbsp;внутренних коммуникаций. В&nbsp;результате у&nbsp;многих в&nbsp;начале работы возникают сложности с&nbsp;поиском необходимых материалов и&nbsp;контактов.</p>
-										<p>Перед участниками хакатона стоит задача разработать информационный сервис&nbsp;&mdash; инструмент для современного и&nbsp;качественного процесса адаптации, помогающий в&nbsp;поиске необходимых материалов и&nbsp;выстраивании эффективных коммуникаций между новыми сотрудниками, HR-службой и&nbsp;руководством.</p><a class="tabs__content-btn" href="https://lk.youthbit.ru/">Хочу решить кейс</a>
+										<p>Перед участниками хакатона стоит задача разработать информационный сервис&nbsp;&mdash; инструмент для современного и&nbsp;качественного процесса адаптации, помогающий в&nbsp;поиске необходимых материалов и&nbsp;выстраивании эффективных коммуникаций между новыми сотрудниками, HR-службой и&nbsp;руководством.</p>
 									</div>
 									<div class="tabs__case-manager">
 										<div class="tabs__case-manager-btn">
@@ -369,7 +333,7 @@ const template = function (img, title, a) {
 										</div>
 										<p>Информационный ресурс Росмолодёжи (ФГАИС &laquo;Молодежь России&raquo;) позволяет собирать данные о&nbsp;субъектах государственной молодёжной политики и&nbsp;результатах их&nbsp;деятельности более, чем по&nbsp;400 показателям из&nbsp;11&nbsp;разделов для формирования различных отчетов.</p>
 										<p>На&nbsp;сегодняшний день большой массив данных собирается в&nbsp;виде таблиц, что недостаточно информативно, с&nbsp;точки зрения их&nbsp;визуализации. Таблицы неудобно использовать в&nbsp;рамках выступлений или презентаций.</p>
-										<p>Перед участниками хакатона, выбравшими этот кейс, стоит задача разработки информативных и&nbsp;интересных, с&nbsp;точки зрения интерфейса, дашбордов, визуализирующих табличные данные для руководителя и&nbsp;сотрудников Росмолодёжи.</p><a class="tabs__content-btn" href="https://lk.youthbit.ru/">Хочу решить кейс</a>
+										<p>Перед участниками хакатона, выбравшими этот кейс, стоит задача разработки информативных и&nbsp;интересных, с&nbsp;точки зрения интерфейса, дашбордов, визуализирующих табличные данные для руководителя и&nbsp;сотрудников Росмолодёжи.</p>
 									</div>
 									<div class="tabs__case-manager">
 										<div class="tabs__case-manager-btn">
@@ -418,7 +382,7 @@ const template = function (img, title, a) {
 										</div>
 										<p>У&nbsp;Росмолодёжи есть информационный ресурс (ФГАИС &laquo;Молодежь России&raquo;), обеспечивающий взаимодействие между субъектами молодёжной политики, реализацию мероприятий, программ и&nbsp;мер государственной поддержки для молодёжи, в&nbsp;частности, предоставление грантов для воплощения творческих, патриотических, образовательных, добровольческих и&nbsp;иных проектов. На&nbsp;сегодняшний день в&nbsp;нем зарегистрировано более 2&nbsp;млн. пользователей.</p>
 										<p>При заполнении заявок у&nbsp;участников грантового конкурса часто возникают вопросы. Ежедневно в&nbsp;техническую поддержку поступает более 20&nbsp;обращений по&nbsp;навигации и&nbsp;поиску необходимой информации, более 40&nbsp;обращений по&nbsp;подаче заявки на&nbsp;мероприятия, до&nbsp;150 обращений по&nbsp;вопросу подачи заявки на&nbsp;получение грантовой поддержки.  Основная проблема&nbsp;&mdash; сложный и&nbsp;&laquo;негибкий&raquo; интерфейс грантового модуля ФГАИС &laquo;Молодежь России&raquo;.</p>
-										<p>Во&nbsp;время хакатона участникам нужно разработать цифровой помощник по&nbsp;заполнению заявки для участия в&nbsp;грантовом конкурсе. Помощник может иметь голосовое управление (участникам предлагается предоставить прототип или концепцию голосового модуля цифрового помощника).</p><a class="tabs__content-btn" href="https://lk.youthbit.ru/">Хочу решить кейс</a>
+										<p>Во&nbsp;время хакатона участникам нужно разработать цифровой помощник по&nbsp;заполнению заявки для участия в&nbsp;грантовом конкурсе. Помощник может иметь голосовое управление (участникам предлагается предоставить прототип или концепцию голосового модуля цифрового помощника).</p>
 									</div>
 									<div class="tabs__case-manager">
 										<div class="tabs__case-manager-btn">
@@ -468,7 +432,7 @@ const template = function (img, title, a) {
 										<p>Цифровая платформа молодёжного и&nbsp;студенческого туризма студтуризм.рф позволяет студентам бронировать кампусы по&nbsp;всей России. На&nbsp;данный момент на&nbsp;портале зарегистрировано более 29&nbsp;000&nbsp;человек.</p>
 										<p>Существует только браузерная версия цифровой платформы. Полноценно использовать возможности сайта на&nbsp;мобильном устройстве через браузер не&nbsp;представляется возможным, что приносит неудобство для пользователей и&nbsp;способствует быстрому оттоку посетителей с&nbsp;сайта. Молодым людям сложно использовать платформу по&nbsp;дороге на&nbsp;учёбу или работу, в&nbsp;отпуске или в&nbsp;путешествиях. Таким образом, многие возможности платформы остаются незамеченными.</p>
 										<p>Мобильное приложение позволит подавать и&nbsp;оперативно отслеживать статус заявки на&nbsp;бронирование места размещения, участвовать в&nbsp;мероприятиях и&nbsp;просматривать новости.</p>
-										<p>Участникам хакатона предстоит разработать мобильную версию платформы с&nbsp;удобным интерфейсом и&nbsp;функциями push-уведомлений, постингом в&nbsp;социальную сеть&nbsp;VK, геймификацией и&nbsp;различными другими полезными функциями.</p><a class="tabs__content-btn" href="https://lk.youthbit.ru/">Хочу решить кейс</a>
+										<p>Участникам хакатона предстоит разработать мобильную версию платформы с&nbsp;удобным интерфейсом и&nbsp;функциями push-уведомлений, постингом в&nbsp;социальную сеть&nbsp;VK, геймификацией и&nbsp;различными другими полезными функциями.</p>
 									</div>
 									<div class="tabs__case-manager">
 										<div class="tabs__case-manager-btn">
