sTimetable section done

--- a/public/index.html
+++ b/public/index.html
@@ -250,6 +250,72 @@ const template = function (img, title, a) {
 					</div>
 				</section>
 				<!-- end sTeam-->
+				<!-- start sTimetable-->
+				<section class="sTimetable section" id="sTimetable">
+					<div class="container">
+						<div class="section-title">
+							<h2>Расписание хакатона</h2>
+							<p>Время по&nbsp;МСК</p>
+						</div>
+						<div class="sTimetable__row row">
+							<div class="col-xl-4">
+								<div class="sTimetable__day">
+									<div class="sTimetable__heading"><span>17 февраля 2023</span><small>Пятница</small>
+									</div>
+									<ul>
+										<li><span>16:00—17:00</span>
+											<div class="sTimetable__event"><span>Торжественное открытие</span>
+											</div>
+										</li>
+										<li><span>18:00—21:40</span>
+											<div class="sTimetable__event"><span>Первый чек-поинт</span>
+											</div>
+										</li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-xl-4">
+								<div class="sTimetable__day">
+									<div class="sTimetable__heading"><span>18 февраля 2023</span><small>Суббота</small>
+									</div>
+									<ul>
+										<li><span>10:00—13:40</span>
+											<div class="sTimetable__event"><span>Второй чек-поинт</span>
+												<p>К началу 2-го чек-поинта команда должна показать, как минимум, ссылку на репозиторий.</p>
+											</div>
+										</li>
+										<li><span>18:00—20:40</span>
+											<div class="sTimetable__event"><span>Третий чек-поинт</span>
+												<p>К старту 3-го чек-поинта,в целях осуществления контроляза прогрессом, команда должна загрузить: драфт тизера решения, ссылку на репозиторий с кодом, драфт презентации.</p>
+											</div>
+										</li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-xl-4">
+								<div class="sTimetable__day">
+									<div class="sTimetable__heading"><span>19 февраля 2023</span><small>Воскресенье</small>
+									</div>
+									<ul>
+										<li><span>10:00</span>
+											<div class="sTimetable__event"><span>Стоп-кодинг</span>
+											</div>
+										</li>
+										<li><span>12:00—18:00</span>
+											<div class="sTimetable__event"><span>Защита решений</span>
+											</div>
+										</li>
+										<li><span>18:00—19:00</span>
+											<div class="sTimetable__event"><span>Торжественное награждение победителей</span>
+											</div>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!-- end sTimetable-->
 				<!-- start sCases-->
 				<section class="sCases section" id="sCases">
 					<div class="container">
