--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@ const template = function (img, title, a) {
 								</picture>
 								<!-- /picture-->
 							</div>
-							<div class="headerBlock__video-wrap active"><iframe src="https://www.youtube.com/embed/h9JlDh7X7eo" title="Fireplace at Night 4K 🔥 Cozy Fireplace (12 HOURS). Fireplace video with Burning Logs &amp; Fire Sounds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<div class="headerBlock__video-wrap">
 							</div>
 							<h1>Молодёжный бит</h1>
 							<p>Всероссийский хакатон <br> для талантливых IT-специалистов</p>
