Updated links in pug

--- a/public/index.html
+++ b/public/index.html
@@ -266,12 +266,7 @@ const template = function (img, title, a) {
 									</div>
 									<ul>
 										<li><span>16:00—17:00</span>
-											<div class="sTimetable__event">
-                        <span>
-                          <a href="https://vk.com/rosmolodez?z=video-49388164_456240671%2F0c24c8e9ed6c36b598%2Fpl_wall_-49388164">
-                            Торжественное открытие
-                          </a>
-                        </span>
+											<div class="sTimetable__event"><a href="https://vk.com/rosmolodez?z=video-49388164_456240671%2F0c24c8e9ed6c36b598%2Fpl_wall_-49388164">Торжественное открытие</a>
 											</div>
 										</li>
 										<li><span>18:00—21:40</span>
@@ -309,21 +304,11 @@ const template = function (img, title, a) {
 											</div>
 										</li>
 										<li><span>12:00—18:00</span>
-											<div class="sTimetable__event">
-                        <span>
-                          <a href="https://vk.com/rosmolodez.business?z=video-130482053_456240091%2Fvideos-130482053%2Fpl_-130482053_-2">
-                            Защита решений
-                          </a>
-                        </span>
+											<div class="sTimetable__event"><a href="https://vk.com/rosmolodez.business?z=video-130482053_456240091%2Fvideos-130482053%2Fpl_-130482053_-2">Защита решений</a>
 											</div>
 										</li>
 										<li><span>18:00—19:00</span>
-											<div class="sTimetable__event">
-                        <span>
-                          <a href="https://vk.com/video-49388164_456240673">
-                            Торжественное награждение победителей
-                          </a>
-                        </span>
+											<div class="sTimetable__event"><a href="https://vk.com/video-49388164_456240673">Торжественное награждение победителей</a>
 											</div>
 										</li>
 									</ul>
