вывел данные призеров

--- a/public/index.html
+++ b/public/index.html
@@ -369,13 +369,7 @@ const template = function (img, title, a) {
 											</div>
 											<div class="swiper-pagination"></div>
 											<!-- - tabs__links скрыт классом .d-none-->
-											<div class="tabs__links d-none"><a class="tabs__content-link" href="#">
-													<svg class="icon icon-sCases-video ">
-														<use xlink:href="img/svg/sprite.svg#sCases-video"></use>
-													</svg><span>Видеоинтервью</span></a><a class="tabs__content-link" href="#">
-													<svg class="icon icon-sCases-project ">
-														<use xlink:href="img/svg/sprite.svg#sCases-project"></use>
-													</svg><span>Презентация кейса</span></a><a class="tabs__content-link" href="#">
+											<div class="tabs__links"><a class="tabs__content-link" href="/shortlist.html">
 													<svg class="icon icon-sContact-win ">
 														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 													</svg><span>Победители и&nbsp;призеры</span></a></div>
@@ -424,13 +418,7 @@ const template = function (img, title, a) {
 											</div>
 											<div class="swiper-pagination"></div>
 											<!-- - tabs__links скрыт классом .d-none-->
-											<div class="tabs__links d-none"><a class="tabs__content-link" href="#">
-													<svg class="icon icon-sCases-video ">
-														<use xlink:href="img/svg/sprite.svg#sCases-video"></use>
-													</svg><span>Видеоинтервью</span></a><a class="tabs__content-link" href="#">
-													<svg class="icon icon-sCases-project ">
-														<use xlink:href="img/svg/sprite.svg#sCases-project"></use>
-													</svg><span>Презентация кейса</span></a><a class="tabs__content-link" href="#">
+											<div class="tabs__links"><a class="tabs__content-link" href="/shortlist.html">
 													<svg class="icon icon-sContact-win ">
 														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 													</svg><span>Победители и&nbsp;призеры</span></a></div>
@@ -473,13 +461,7 @@ const template = function (img, title, a) {
 											</div>
 											<div class="swiper-pagination"></div>
 											<!-- - tabs__links скрыт классом .d-none-->
-											<div class="tabs__links d-none"><a class="tabs__content-link" href="#">
-													<svg class="icon icon-sCases-video ">
-														<use xlink:href="img/svg/sprite.svg#sCases-video"></use>
-													</svg><span>Видеоинтервью</span></a><a class="tabs__content-link" href="#">
-													<svg class="icon icon-sCases-project ">
-														<use xlink:href="img/svg/sprite.svg#sCases-project"></use>
-													</svg><span>Презентация кейса</span></a><a class="tabs__content-link" href="#">
+											<div class="tabs__links"><a class="tabs__content-link" href="/shortlist.html">
 													<svg class="icon icon-sContact-win ">
 														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 													</svg><span>Победители и&nbsp;призеры</span></a></div>
@@ -543,13 +525,7 @@ const template = function (img, title, a) {
 											</div>
 											<div class="swiper-pagination"></div>
 											<!-- - tabs__links скрыт классом .d-none-->
-											<div class="tabs__links d-none"><a class="tabs__content-link" href="#">
-													<svg class="icon icon-sCases-video ">
-														<use xlink:href="img/svg/sprite.svg#sCases-video"></use>
-													</svg><span>Видеоинтервью</span></a><a class="tabs__content-link" href="#">
-													<svg class="icon icon-sCases-project ">
-														<use xlink:href="img/svg/sprite.svg#sCases-project"></use>
-													</svg><span>Презентация кейса</span></a><a class="tabs__content-link" href="#">
+											<div class="tabs__links"><a class="tabs__content-link" href="/shortlist.html">
 													<svg class="icon icon-sContact-win ">
 														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 													</svg><span>Победители и&nbsp;призеры</span></a></div>
