--- a/public/index.html
+++ b/public/index.html
@@ -369,7 +369,7 @@ const template = function (img, title, a) {
 											</div>
 											<div class="swiper-pagination"></div>
 											<!-- - tabs__links скрыт классом .d-none-->
-											<div class="tabs__links"><a class="tabs__content-link" href="/shortlist.html">
+											<div class="tabs__links"><a class="tabs__content-link" href="shortlist.html">
 													<svg class="icon icon-sContact-win ">
 														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 													</svg><span>Победители и&nbsp;призеры</span></a></div>
@@ -418,7 +418,7 @@ const template = function (img, title, a) {
 											</div>
 											<div class="swiper-pagination"></div>
 											<!-- - tabs__links скрыт классом .d-none-->
-											<div class="tabs__links"><a class="tabs__content-link" href="/shortlist.html">
+											<div class="tabs__links"><a class="tabs__content-link" href="shortlist.html">
 													<svg class="icon icon-sContact-win ">
 														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 													</svg><span>Победители и&nbsp;призеры</span></a></div>
@@ -461,7 +461,7 @@ const template = function (img, title, a) {
 											</div>
 											<div class="swiper-pagination"></div>
 											<!-- - tabs__links скрыт классом .d-none-->
-											<div class="tabs__links"><a class="tabs__content-link" href="/shortlist.html">
+											<div class="tabs__links"><a class="tabs__content-link" href="shortlist.html">
 													<svg class="icon icon-sContact-win ">
 														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 													</svg><span>Победители и&nbsp;призеры</span></a></div>
@@ -525,7 +525,7 @@ const template = function (img, title, a) {
 											</div>
 											<div class="swiper-pagination"></div>
 											<!-- - tabs__links скрыт классом .d-none-->
-											<div class="tabs__links"><a class="tabs__content-link" href="/shortlist.html">
+											<div class="tabs__links"><a class="tabs__content-link" href="shortlist.html">
 													<svg class="icon icon-sContact-win ">
 														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 													</svg><span>Победители и&nbsp;призеры</span></a></div>
