--- a/public/shortlist.html
+++ b/public/shortlist.html
@@ -313,7 +313,7 @@ getWinners('assistant');
 								<div class="tabs__btn"><span>Молодёжный туризм</span></div>
 							</div>
 							<div class="tabs__wrap">
-								<div class="tabs__content active" id="onboarding">
+								<div class="tabs__content active" id="dashboard">
 									<div class="tabs__content-wrap">
 										<div class="tabs__title">
 											<h4>Дашборд</h4>
@@ -331,7 +331,7 @@ getWinners('assistant');
 										</div>
 									</div>
 								</div>
-								<div class="tabs__content" id="tourism">
+								<div class="tabs__content" id="assistant">
 									<div class="tabs__content-wrap">
 										<div class="tabs__title">
 											<h4>Цифровой помощник</h4>
@@ -349,7 +349,7 @@ getWinners('assistant');
 										</div>
 									</div>
 								</div>
-								<div class="tabs__content" id="dashboard">
+								<div class="tabs__content" id="onboarding">
 									<div class="tabs__content-wrap">
 										<div class="tabs__title">
 											<h4>Онбординг</h4>
@@ -367,7 +367,7 @@ getWinners('assistant');
 										</div>
 									</div>
 								</div>
-								<div class="tabs__content" id="assistant">
+								<div class="tabs__content" id="tourism">
 									<div class="tabs__content-wrap">
 										<div class="tabs__title">
 											<h4>Молодёжный туризм</h4>
