--- a/public/index.html
+++ b/public/index.html
@@ -182,7 +182,7 @@ const template = function (img, title, a) {
 								<li>Участвуй онлайн из&nbsp;любой точки страны</li>
 								<li>Приходи кодить на&nbsp;офлайн-площадку</li>
 							</ul>
-							<a class="headerBlock__btn btn btn-success disabled" href="https://lk.youthbit.ru/">Регистрация завершена
+							<a class="headerBlock__btn btn btn-primary" href="/shortlist.html">ПОБЕДИТЕЛИ
 							</a>
 						</div>
 					</div>
@@ -369,7 +369,7 @@ const template = function (img, title, a) {
 											</div>
 											<div class="swiper-pagination"></div>
 											<!-- - tabs__links скрыт классом .d-none-->
-											<div class="tabs__links"><a class="tabs__content-link" href="shortlist.html">
+											<div class="tabs__links"><a class="tabs__content-link" href="shortlist.html#onboarding">
 													<svg class="icon icon-sContact-win ">
 														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 													</svg><span>Победители и&nbsp;призеры</span></a></div>
@@ -418,7 +418,7 @@ const template = function (img, title, a) {
 											</div>
 											<div class="swiper-pagination"></div>
 											<!-- - tabs__links скрыт классом .d-none-->
-											<div class="tabs__links"><a class="tabs__content-link" href="shortlist.html">
+											<div class="tabs__links"><a class="tabs__content-link" href="shortlist.html#dashboard">
 													<svg class="icon icon-sContact-win ">
 														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 													</svg><span>Победители и&nbsp;призеры</span></a></div>
@@ -461,7 +461,7 @@ const template = function (img, title, a) {
 											</div>
 											<div class="swiper-pagination"></div>
 											<!-- - tabs__links скрыт классом .d-none-->
-											<div class="tabs__links"><a class="tabs__content-link" href="shortlist.html">
+											<div class="tabs__links"><a class="tabs__content-link" href="shortlist.html#assistant">
 													<svg class="icon icon-sContact-win ">
 														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 													</svg><span>Победители и&nbsp;призеры</span></a></div>
@@ -525,7 +525,7 @@ const template = function (img, title, a) {
 											</div>
 											<div class="swiper-pagination"></div>
 											<!-- - tabs__links скрыт классом .d-none-->
-											<div class="tabs__links"><a class="tabs__content-link" href="shortlist.html">
+											<div class="tabs__links"><a class="tabs__content-link" href="shortlist.html#tourism">
 													<svg class="icon icon-sContact-win ">
 														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 													</svg><span>Победители и&nbsp;призеры</span></a></div>
